@@ -1,3 +1,5 @@
+[B]1.9.5:[/B]
+- fix video archive Date
 [B]1.9.4:[/B]
 - added radio archive Extra
 - added radio archive Plus
